# route-profiles-luci

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: build.yml
files/etc/config/: vpn-switch
files/etc/init.d/: route-profiles  vpn-switch
files/etc/route-profiles/profiles/: brr.example.toml
files/etc/vpn-switch/profiles/: brr.example.toml  direct.toml
files/usr/share/luci/menu.d/: luci-routeprofiles.json  luci-vpnswitch.json
files/usr/share/rpcd/acl.d/: luci-routeprofiles.json  luci-vpnswitch.json
files/www/luci-static/resources/view/network/: vpnswitch.js
route-profiles/: Makefile
route-profiles/files/etc/config/: route-profiles
route-profiles/files/etc/route-profiles/profiles/: brr.example.toml
route-profiles/files/www/luci-static/resources/view/network/: routeprofiles.js
route-profiles/geoextract/: Cargo.toml
route-profiles/geoextract/src/: bin_reader.rs  dat.rs  geoip_db.rs  geosite_db.rs  main.rs  srs.rs
