[package]
name = "route-profiles-geoextract"
version = "2.2.0"
edition = "2021"
description = "Extract domains/CIDRs from V2Fly/Xray/sing-box geo binaries"
license = "GPL-2.0-or-later"
publish = false

[dependencies]
# pure-Rust zlib (no system libz) for .srs
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
